--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -67,7 +67,7 @@
       "phone": "Teléfono",
       "date": "Fecha de Visita",
       "time": "Hora de Visita",
-      "message": "Mensaje",
+      "message": "Mensaje (Opcional)",
       "submit": "ENVIAR MENSAJE",
       "sending": "Enviando...",
       "success": "Mensaje enviado exitosamente",
